--- a/src/data/index.html
+++ b/src/data/index.html
@@ -20,17 +20,17 @@
             <table>
                 <tr>
                     <td style="width:14.4px; text-align: right"> </td>
-                    <td> <p style="margin:8px 0px"><button id="rainbow" class="button" style="background-color:#999" onclick="rainbowEffect();">Forward</button></p></td>
+                    <td> <p style="margin:8px 0px"><button id="forward" class="button" style="background-color:#999" onclick="rainbowEffect();">Forward</button></p></td>
                     <td style="width:14.4px; text-align: right"> </td>
                 </tr>
                 <tr>
-                    <td> <p style="margin:8px 0px"><button id="rainbow" class="button" style="background-color:#999" onclick="rainbowEffect();">Left</button></p></td>
+                    <td> <p style="margin:8px 0px"><button id="left" class="button" style="background-color:#999" onclick="rainbowEffect();">Left</button></p></td>
                     <td style="width:14.4px; text-align: center"> </td>
-                    <td> <p style="margin:8px 0px"><button id="rainbow" class="button" style="background-color:#999" onclick="rainbowEffect();">Right</button></p></td>
+                    <td> <p style="margin:8px 0px"><button id="right" class="button" style="background-color:#999" onclick="rainbowEffect();">Right</button></p></td>
                 </tr>
                 <tr>
                     <td style="width:14.4px; text-align: right"> </td>
-                    <td> <p style="margin:8px 0px"><button id="rainbow" class="button" style="background-color:#999" onclick="rainbowEffect();">Backward</button></p></td>
+                    <td> <p style="margin:8px 0px"><button id="backward" class="button" style="background-color:#999" onclick="rainbowEffect();">Backward</button></p></td>
                     <td style="width:14.4px; text-align: right"> </td>
                 </tr>
             </table>
